# model-traits

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  ModelTraitsConfig.cmake  README.md  associated_graph.dot  config.sh  environment.sh  paper.bib  paper.md  unassociated_graph.dot
.github/workflows/: linux.yml
cmake/: FindSIMMODSUITE.cmake  ModelTraitsConfig.cmake.in
doc/: CMakeLists.txt
examples/: CMakeLists.txt  basic_usage.cc  core_usage.cc  pumi.cc  smd2yaml.cc  smd2yaml_phasta.cc  yaml_with_backend.cc
examples/inputs/: indentation.yaml  input1.yaml  pumi.yaml
exe/: CMakeLists.txt
src/: CMakeLists.txt  bcAssociatedModelTraits.cc  bcAssociatedModelTraits.h  bcBC.h  bcBCNode.h  bcCategoryNode.cc  bcCategoryNode.h  bcCategoryNode_impl.h  bcConvert.h  bcExprtkFunction.cc  bcExprtkFunction.h  bcFunctionHelper.h  bcGeometrySet.h  bcINode.h  bcModelTraits.cc  bcModelTraits.h  bcModelTraitsIO.h  bcNamedFunction.h  bcNodeSet.h  bcNodeVisitor.h  bcTypeBool.h  bcTypeMatrix.h  bcTypeScalar.h  bcTypeString.h  bcTypeTraits.h  bcTypeVector.h  bcTypedefs.h  bcTypes.h  bcUtility.h
src/backends/: CMakeLists.txt  bcBackendSimmetrix.cc  bcBackendSimmetrix.h  bcBackendSimmetrixConvert.cc  bcBackendSimmetrixConvert.h  bcBackendYamlCpp.cc  bcBackendYamlCpp.h  bcBackendYamlCppConvert.cc  bcBackendYamlCppConvert.h  bcSimWrapper.h
src/boundary_condition_types/: bcTypeBool.h  bcTypeMatrix.h  bcTypeScalar.h  bcTypeString.h  bcTypeVector.h
src/model_traits/: AssociatedModelTraits.cc  AssociatedModelTraits.h  CMakeLists.txt  CategoryNode.cc  CategoryNode.h  Convert.h  ExprtkFunction.cc  ExprtkFunction.h  FunctionHelper.h  GeometrySet.h  ModelTrait.h  ModelTraitNode.cc  ModelTraitNode.h  ModelTraits.cc  ModelTraits.h  ModelTraitsIO.h  NamedFunction.h  NodeSet.h  TypeTraits.h  Typedefs.h  Utility.h  bcAssociatedModelTraits.cc  bcAssociatedModelTraits.h  bcBCNode.h  bcCategoryNode.h  bcConvert.h  bcGeometrySet.h  bcINode.h  bcModelTraits.h  bcNodeSet.h
src/model_traits/backends/: CMakeLists.txt  Simmetrix.cc  Simmetrix.h  SimmetrixConvert.cc  SimmetrixConvert.h  SimmetrixWrapper.h  Yaml.cc  Yaml.h  YamlConvert.cc  YamlConvert.h  YamlCpp.cc  bcBackendSimmetrix.cc  bcBackendSimmetrix.h  bcBackendSimmetrixConvert.cc  bcBackendSimmetrixConvert.h  bcBackendYamlCpp.cc  bcBackendYamlCpp.h  bcBackendYamlCppConvert.h
test/: CMakeLists.txt  exprtk_test.cc  generic_test.cc  syntax-test.yaml  test_associated_model_traits.cc  test_category_node.cc  test_function.cc  test_model_traits.cc  test_reader.cc
tpl/: CMakeLists.txt
tpl/exprtk/: CMakeLists.txt  exprtk.hpp
