option(MODEL_TRAITS_BUILD_DOCS "build project documentation" OFF)
message(STATUS "MODEL_TRAITS_BUILD_DOCS=${MODEL_TRAITS_BUILD_DOCS}")
if(MODEL_TRAITS_BUILD_DOCS)
  find_package(Doxygen REQUIRED)
  set(DOXYGEN_SOURCE_BROWSER YES)
  set(DOXYGEN_INLINE_SOURCES YES)
  set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
  doxygen_add_docs(doc ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/examples ${PROJECT_SOURCE_DIR}/test ${PROJECT_SOURCE_DIR}/README.md )
endif()
